[package]
name = "tpm"
version = "0.1.0"
authors = ["saber <saber.wu@trantect.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8.2"
