[package]
name = "tpm"
version = "0.1.0"
authors = ["saber <saber.wu@trantect.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8.2"
filesystem = "0.4.4"
fs_extra = "1.1.0"
structopt = "0.3.8"
url = "2.1.1"
git2 = "0.11.0"
context-attribute = {git="https://github.com/woodgear/context-attribute",branch="feature/custom-msg"}
dirs = "2.0.2"
git-url-parse = "0.0.1"
